Puppeteer on Cloud Functions
Cloud Functions で Puppeteer を使ってアクセスするサンプル

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,8 @@ volumes:
     driver: local
   bundle:
     driver: local
+  functions_node_modules:
+    driver: local
 services:
   db:
     image: postgres:11.2-alpine
@@ -42,3 +44,14 @@ services:
     depends_on:
       - db
       - webpack
+      - functions
+  functions:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.functions
+    command: ["npm", "start"]
+    volumes:
+      - ./functions:/src
+      - functions_node_modules:/src/node_modules
+    ports:
+      - 8080:8080
