--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx @google-cloud/functions-framework"
+    "start": "npx @google-cloud/functions-framework --signature-type=event"
   },
   "author": "",
   "license": "ISC",
